<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:id="@+id/loginActivity"
  tools:context=".LoginActivity"
  >

  <ImageView
    android:id="@+id/imgViewLogin"
    android:layout_width="393dp"
    android:layout_height="249dp"
    android:layout_marginTop="8dp"
    android:src="@mipmap/ic_launcher_foreground"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <EditText
    android:id="@+id/emailLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="32dp"
    android:layout_marginEnd="32dp"
    android:backgroundTint="@color/black"
    android:ems="10"
    android:hint="@string/email"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imgViewLogin" />

  <EditText
    android:id="@+id/passwordLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    android:ems="10"
    android:hint="@string/passwd"
    android:inputType="textPassword"
    android:backgroundTint="@color/black"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/emailLogin" />

  <Button
    android:id="@+id/buttonLogin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    android:text="@string/login"
    android:textColor="@color/onPrimary"
    android:backgroundTint="@color/colorPrimary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
    app:cornerRadius="16dp"/>

  <Button
    android:id="@+id/buttonCreateAccount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="32dp"
    android:text="@string/create_account"
    android:backgroundTint="@color/colorSecondary"
    android:textColor="@color/onSecondary"
    app:cornerRadius="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
    />


  <Button
    android:id="@+id/buttonGoogle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="32dp"
    android:backgroundTint="@color/primaryContainer"
    android:drawableLeft="@drawable/icons8_google"
    android:gravity="center"
    android:text="@string/google"
    android:textAllCaps="false"
    android:textColor="@color/black"
    android:textSize="16sp"
    app:cornerRadius="16dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/buttonCreateAccount" />






</androidx.constraintlayout.widget.ConstraintLayout>
