<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="accept_conditions">Debes aceptar los términos y condiciones de la app para registrarte</string>
  <string name="acept">Aceptar</string>
  <string name="acount">Cuenta</string>
  <string name="acount_create_well">Cuenta creada con éxito</string>
  <string name="action_settings">Settings</string>
  <string name="action_sign_in">Iniciar sesión o registrarse</string>
  <string name="action_sign_in_short">Iniciar sesión</string>
  <string name="app_name">Deteccion Incidencias Viales</string>
  <string name="camera">Camara</string>
  <string name="camera_permission_fail">Permiso de cámara denegado</string>
  <string name="cant_open_camera">No se puede abrir la cámara</string>
  <string name="change">Cambiar</string>
  <string name="change_avatar">Cambiar foto de perfil</string>
  <string name="change_email">Cambiar Correo</string>
  <string name="change_password">Cambiar Contraseña</string>
  <string name="configuration_lenguage_spanish">Idioma configurado a Español</string>
  <string name="configuration_lenguage_english">Idioma configurado a Ingles</string>
  <string name="confirm_password">Confirmar contraseña</string>
  <string name="create_account">Crear cuenta</string>
  <string name="current_email">Correo Actual</string>
  <string name="current_pasword">Contraseña Actual</string>
  <string name="dark_mode">Modo oscuro</string>
  <string name="dark_mode_activated">Modo oscuro activado</string>
  <string name="date">Fecha</string>
  <string name="delete_account">Eliminar cuenta</string>
  <string name="dialog_title_change_email">Cambiar Correo</string>
  <string name="email">Correo electrónico</string>
  <string name="email_is_login">Error: El correo ya está registrado</string>
  <string name="email_passwd_dont_match">El correo o la contraseña son incorrectas</string>
  <string name="english">English</string>
  <string name="error">Error</string>
  <string name="error_creating_image">Error al crear archivo de imagen</string>
  <string name="error_having_location">Error al obtener ubicación</string>
  <string name="error_send_null_incident">No se puede enviar una foto que no sea incidencia, intenlo de nuevo</string>
  <string name="error_updating_UID_incident">Error al actualizar el UID en la incidencia</string>
  <string name="error_upload_photo">Error al subir la imagen</string>
  <string name="galery">Galeria</string>
  <string name="gaps_empty">Por favor completa todos los campos</string>
  <string name="general">General</string>
  <string name="incident_send_bad">Error al registrar la incidencia</string>
  <string name="incident_send_bad_no_data">Error al registrar la incidencia. Saca una foto</string>
  <string name="incident_send_well">Se ha registrado la incidencia CORRECTAMENTE</string>
  <string name="info">Info</string>
  <string name="invalid_email">Correo inválido</string>
  <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
  <string name="invalid_username">Nombre de usuario no válido</string>
  <string name="in_proces">En Proceso</string>
  <string name="language">Idioma</string>
  <string name="lenguage_chose">Seleciona un idoma</string>
  <string name="language_english">English</string>
  <string name="language_spanish">Español</string>
  <string name="light_mode_activated">Modo claro activado</string>
  <string name="localization">Lacalización</string>
  <string name="location_not_enabled">Ubicación no disponible</string>
  <string name="login">Iniciar sesión</string>
  <string name="logout">Cerrar Cuenta</string>
  <string name="login_failed">Inicio de sesión fallido</string>
  <string name="look_incident">Ver mis incidencias</string>
  <string name="menu_config">Configuración</string>
  <string name="menu_incident">Incidencias</string>
  <string name="menu_checkIncident">Detalles Incidencia</string>
  <string name="menu_home">Home</string>
  <string name="menu_info">Información</string>
  <string name="menu_logout">Cerrar Cuenta</string>
  <string name="menu_map">Mapa</string>
  <string name="menu_settings">Ajustes</string>
  <string name="menu_share">Compartir</string>
  <string name="menu_slideshow">Comprobar Incidencia</string>
  <string name="name_app">IA Incidencias Viales</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="new_email">Nuevo Correo</string>
  <string name="new_pasword">Nueva Contraseña</string>
  <string name="notification">Notificaciones</string>
  <string name="notification_activated">Notificaciones activadas</string>
  <string name="notification_disable">Notificaciones activadas</string>
  <string name="passwd">Contraseña</string>
  <string name="passwd_dont_match">Las contraseñas no coinciden</string>
  <string name="permission_locattion_not_enable">Permiso de ubicación no otorgado</string>
  <string name="prediction_error">Error al predecir</string>
  <string name="result">Resuelta</string>
  <string name="send_incident">Enviar incidencia</string>
  <string name="sesion">Sesión</string>
  <string name="spanish">Español</string>
  <string name="status">Estado de la incidencia</string>
  <string name="status_incident_list">Estado</string>
  <string name="take_photo">Tomar foto</string>
  <string name="title_activity_crateaAcount">Crear Cuenta</string>
  <string name="title_activity_listIncident">Mis incidencias</string>
  <string name="title_activity_login">Iniciar Sesión</string>
  <string name="title_activity_main">IA Incidencias Viales</string>
  <string name="toast_all_fields_required">Todos los campos son obligatorios</string>
  <string name="toast_current_email_not_found">El correo actual no existe</string>
  <string name="toast_email_not_user">Este correo no pertenece al usuario actual</string>
  <string name="toast_email_update_failed">No se pudo actualizar el correo</string>
  <string name="toast_email_updated_success">Correo actualizado correctamente</string>
  <string name="toast_emails_not_match">Los correos no coinciden</string>
  <string name="toast_passwords_not_match">Los contraseñas no coinciden</string>
  <string name="toast_password_updated_success">Se ha actualizado la contraseña</string>
  <string name="toast_password_update_failed">No se ha actualizado la contraseña</string>
  <string name="toast_username_or_password_wrong">Nombre de usuario o contraseña incorrectos</string>
  <string name="toast_user_not_found">No hay usuarios con ese Email</string>
  <string name="toast_wrong_current_password">La contraseña del usaurio no es correcta</string>
  <string name="type_incident">Tipo</string>
  <string name="type_incident_home">Tipo de Incidencia</string>
  <string name="user_name">Nombre de usuario</string>
  <string name="waiting">Pendiente</string>
  <string name="welcome">¡Bienvenido!</string>
  <string name="button_cancel">Cancelar</string>

  <string name="username">Nombre de Usuario</string>
  <string name="confirm_new_email">Confirmar Nuevo Correo</string>

  <string name="dialog_delete_account_title">Eliminar cuenta</string>
  <string name="dialog_delete_account_message">¿Estás seguro de que deseas eliminar tu cuenta? Esta acción no se puede deshacer.</string>
  <string name="dialog_delete_account_yes">Sí</string>
  <string name="dialog_delete_account_no">No</string>
  <string name="toast_account_deleted">Cuenta eliminada con éxito</string>
  <string name="toast_account_delete_failed">No se pudo eliminar la cuenta</string>
  <string name="toast_error_reauthenticating">Error, correo o contraseña actual no coinciden</string>
  <string name="toast_current_email_not_match">Error, el correo no coincide con el correo actual del usuario</string>

  <string name="error_saving_user">Error al guardar usuario en Firestore</string>
  <string name="error_create_Acount">Error al crear cuenta:</string>

  <string name="default_web_client_id">934980339087-i2o8g1r838sb7iquifsdvopqano1t5mh.apps.googleusercontent.com</string>

  <string name="dialog_share_title">Compartir aplicación</string>
  <string name="dialog_share_WhatsApp_error">WhatsApp no está instalado</string>
  <string name="dialog_share_check_app">Mira esta aplicación</string>
  <string name="dialog_share_No_App_error">No hay apps de correo disponibles</string>
  <string name="dialog_share_github_link">GitHub Link</string>
  <string name="dialog_share_copy_link">Enlace copiado al portapapelesk</string>
  <string name="google">Continuar con Google</string>
  <string name="facebook">Continuar con Facebook</string>
  <string name="view">VER</string>

  <string-array name="languages_array">
    <item>Español</item>
    <item>Ingles</item>
  </string-array>

</resources>
